[package]
name = "file_paths"
version = "0.1.2"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/hydroper/rust_file_paths"
license = "ISC"
description = "Work with generic file paths for different platforms."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "3.0.0"
